[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://Menu/script/setting_panel.gd" id="1_omu7x"]
[ext_resource type="Texture2D" uid="uid://cevx5k7nvq35s" path="res://Ressources/sprite/shooter/global/Window.png" id="2_cm0fp"]

[sub_resource type="LabelSettings" id="LabelSettings_g8kd8"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_u1j6l"]

[sub_resource type="LabelSettings" id="LabelSettings_u03f3"]

[node name="setting_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omu7x")

[node name="panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -118.0
offset_right = 213.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cm0fp")
expand_mode = 1

[node name="MarginContainer_title" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_top = 185.0
offset_right = 42.5
offset_bottom = 228.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 5

[node name="title" type="Label" parent="MarginContainer_title"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Setting"
label_settings = SubResource("LabelSettings_g8kd8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -67.0
offset_right = 164.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="vbox_label" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="label_song" type="Label" parent="HBoxContainer/vbox_label"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Musique volume"
label_settings = SubResource("LabelSettings_u1j6l")

[node name="FX_volume" type="Label" parent="HBoxContainer/vbox_label"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "FX Volume
"
label_settings = SubResource("LabelSettings_u03f3")

[node name="vbox_sliders" type="VBoxContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="slider_song" type="HSlider" parent="HBoxContainer/vbox_sliders"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="slider_FX" type="HSlider" parent="HBoxContainer/vbox_sliders"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="MarginContainer_button_close" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = 79.0
offset_right = 51.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 5

[node name="button_close" type="Button" parent="MarginContainer_button_close"]
layout_mode = 2
text = "Fermer"

[connection signal="value_changed" from="HBoxContainer/vbox_sliders/slider_song" to="." method="_on_slider_song_value_changed"]
[connection signal="value_changed" from="HBoxContainer/vbox_sliders/slider_FX" to="." method="_on_slider_fx_value_changed"]
[connection signal="pressed" from="MarginContainer_button_close/button_close" to="." method="_on_button_close_pressed"]
